<resources>
    <string name="app_name">Object Detection</string>
    <string name="lbl_progress_loading">Loading</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="exit">Exit</string>
    <string name="probability">\"Probability : \"</string>
    <string name="no_of_object_detected">\"No of Objects Detected : \"</string>
    <string name="class_name">\"Class Name : \"</string>
    <string name="input_feature_p_threshold">Input Feature - P Threshold</string>
    <string name="input_feature_nms_threshold">Input Feature - NMS Threshold</string>
    <string name="output">Output</string>
    <string name="do_want_to_close_this_app">Do want to close this App ?</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="copyright_2022_anuj_panthri_and_satyam_singh">Copyright \u00a9 2022 Anuj Panthri and Satyam Singh</string>
    <string name="download_successfully">Download Successfully!</string>
</resources>