<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_feature_p_threshold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/sb_p_threshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progress="50"
                    android:progressTint="@color/purple_700"
                    android:thumbTint="@color/purple_700" />

                <TextView
                    android:id="@+id/tv_p_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/input_feature_nms_threshold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/sb_nms_threshold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:min="0"
                    android:progress="50"
                    android:progressTint="@color/purple_700"
                    android:thumbTint="@color/purple_700" />

                <TextView
                    android:id="@+id/tv_nms_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/rounded_btn"
                android:drawablePadding="18dp"
                android:paddingHorizontal="10dp"
                android:text="Choose Image"
                android:textAllCaps="false"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/ic_baseline_photo_camera_back_24"
                app:drawableTint="@color/purple_700" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/ll_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_btn"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/output"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_save_output_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_download_24"
                        app:tint="@color/purple_700" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginVertical="7dp"
                    android:background="@color/purple_700" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="7dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/tvNoOfObjectDetected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No. Of Object Detected : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Probability : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvClassName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Class name : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/common_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B3000000"
                android:gravity="center">

                <ProgressBar
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:indeterminateTint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/lbl_progress_loading"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_rights_reserved"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright_2022_anuj_panthri_and_satyam_singh"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_copyright" />

</androidx.constraintlayout.widget.ConstraintLayout>
